--- a/aboutus.html
+++ b/aboutus.html
@@ -81,9 +81,9 @@
       <div class="sec">
         <h3>ИНФОРМАЦИЯ</h3>
         <ul>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Акции</a></li>
-          <li><a href="#">О компании</a></li>
+          <li><a href="catalogue.html">Каталог</a></li>
+          <li><a href="sales.html">Акции</a></li>
+          <li><a href="aboutus.html">О компании</a></li>
         </ul>
       </div>
       <div class="sec">
@@ -107,9 +107,9 @@
       <div class="sec">
         <h3>МЫ В СОЦСЕТЯХ:</h3>
         <div class="social_links">
-          <a href=""><i class="fab fa-youtube"></i></a>
-          <a href=""><i class="fab fa-telegram"></i></a>
-          <a href=""><i class="fab fa-vk"></i></a>
+          <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+          <a href="https://t.me/renarill"><i class="fab fa-telegram"></i></a>
+          <a href="https://vk.com/renarill"><i class="fab fa-vk"></i></a>
         </div>
       </div>
     </div>
