--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
             </p>
           </li>
           <li>
-            <p><span><i class="fa fa-phone" aria-hidden="true"></i></span><a href="tel:+1234567890"> +7 (925) 991
+            <p><span><i class="fa fa-phone" aria-hidden="true"></i></span><a href="tel:+79259914090"> +7 (925) 991
                 40-90</a>
             </p>
           </li>
           <li>
-            <p><span><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:example@mail.ru">
+            <p><span><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:cyralen@gmail.com">
                 cyralen@gmail.com</a></p>
           </li>
         </ul>
