--- a/sales.html
+++ b/sales.html
@@ -73,43 +73,46 @@
         </div>
     </div>
     <footer class="footer">
-        <div class="footer_container">
-          <div class="sec">
-            <h3>ИНФОРМАЦИЯ</h3>
-            <ul>
-              <li><a href="#">Каталог</a></li>
-              <li><a href="#">Акции</a></li>
-              <li><a href="#">О компании</a></li>
-            </ul>
-          </div>
-          <div class="sec">
-            <h3>СВЯЖИТЕСЬ С НАМИ</h3>
-            <ul class="info">
-              <li>
-                <p><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>   14 Tverskaya Street<br>Moscow, Russia</p>
-              </li>
-              <li>
-                <p><span><i class="fa fa-phone" aria-hidden="true"></i></span><a href="tel:+1234567890">   +7 (925) 991 40-90</a>
-                </p>
-              </li>
-              <li>
-                <p><span><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:example@mail.ru">   cyralen@gmail.com</a></p>
-              </li>
-            </ul>
-          </div>
-          <div class="sec">
-            <h3>МЫ В СОЦСЕТЯХ:</h3>
-            <div class="social_links">
-              <a href=""><i class="fab fa-youtube"></i></a>
-              <a href=""><i class="fab fa-telegram"></i></a>
-              <a href=""><i class="fab fa-vk"></i></a>
-            </div>
-          </div>
+    <div class="footer_container">
+      <div class="sec">
+        <h3>ИНФОРМАЦИЯ</h3>
+        <ul>
+          <li><a href="catalogue.html">Каталог</a></li>
+          <li><a href="sales.html">Акции</a></li>
+          <li><a href="aboutus.html">О компании</a></li>
+        </ul>
+      </div>
+      <div class="sec">
+        <h3>СВЯЖИТЕСЬ С НАМИ</h3>
+        <ul class="info">
+          <li>
+            <p><span><i class="fa fa-map-marker" aria-hidden="true"></i></span> 14 Tverskaya Street<br>Moscow, Russia
+            </p>
+          </li>
+          <li>
+            <p><span><i class="fa fa-phone" aria-hidden="true"></i></span><a href="tel:+79259914090"> +7 (925) 991
+                40-90</a>
+            </p>
+          </li>
+          <li>
+            <p><span><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:cyralen@gmail.com">
+                cyralen@gmail.com</a></p>
+          </li>
+        </ul>
+      </div>
+      <div class="sec">
+        <h3>МЫ В СОЦСЕТЯХ:</h3>
+        <div class="social_links">
+          <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+          <a href="https://t.me/renarill"><i class="fab fa-telegram"></i></a>
+          <a href="https://vk.com/renarill"><i class="fab fa-vk"></i></a>
         </div>
-        <div class="copyright">
-          <p>Copyright © Кириллова А.В., 3 семестр, для МИРЭА 2023.</p>
-        </div>
-      </footer>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright © Кириллова А.В., 3 семестр, для МИРЭА 2023.</p>
+    </div>
+  </footer>
     <script src="js/burger_script.js"></script>
     <script src="js/redirect_to.js"></script>
 </body>
