--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -75,15 +75,14 @@
     </div>
   </div>
 
-
   <footer class="footer">
     <div class="footer_container">
       <div class="sec">
         <h3>ИНФОРМАЦИЯ</h3>
         <ul>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Акции</a></li>
-          <li><a href="#">О компании</a></li>
+          <li><a href="catalogue.html">Каталог</a></li>
+          <li><a href="sales.html">Акции</a></li>
+          <li><a href="aboutus.html">О компании</a></li>
         </ul>
       </div>
       <div class="sec">
@@ -94,12 +93,12 @@
             </p>
           </li>
           <li>
-            <p><span><i class="fa fa-phone" aria-hidden="true"></i></span><a href="tel:+1234567890"> +7 (925) 991
+            <p><span><i class="fa fa-phone" aria-hidden="true"></i></span><a href="tel:+79259914090"> +7 (925) 991
                 40-90</a>
             </p>
           </li>
           <li>
-            <p><span><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:example@mail.ru">
+            <p><span><i class="fa fa-envelope" aria-hidden="true"></i></span><a href="mailto:cyralen@gmail.com">
                 cyralen@gmail.com</a></p>
           </li>
         </ul>
@@ -107,9 +106,9 @@
       <div class="sec">
         <h3>МЫ В СОЦСЕТЯХ:</h3>
         <div class="social_links">
-          <a href=""><i class="fab fa-youtube"></i></a>
-          <a href=""><i class="fab fa-telegram"></i></a>
-          <a href=""><i class="fab fa-vk"></i></a>
+          <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+          <a href="https://t.me/renarill"><i class="fab fa-telegram"></i></a>
+          <a href="https://vk.com/renarill"><i class="fab fa-vk"></i></a>
         </div>
       </div>
     </div>
